<resources>
    <string name="app_name">Taco Miendo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BrandonQ2</string>
    <string name="nav_header_subtitle">branqq1598@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_cuenta">Mi cuenta</string>
    <string name="menu_categorias">Categorias</string>
    <string name="menu_configuracion">Configuracion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
