<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@mipmap/inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@mipmap/cuenta"
            android:title="@string/menu_cuenta" />
        <item
            android:id="@+id/nav_Categorias"
            android:icon="@mipmap/categorias"
            android:title="@string/menu_categorias" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@mipmap/configuracion"
            android:title="@string/menu_configuracion" />
    </group>

</menu>
